<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/full_name"
        app:layout_constraintBottom_toTopOf="@+id/studentID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toEndOf="@+id/Name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519" />

    <EditText
        android:id="@+id/studentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:inputType="text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@integer/student_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toEndOf="@+id/Student_ID"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/name_label"
        app:layout_constraintBottom_toTopOf="@+id/Student_ID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526" />

    <EditText
        android:id="@+id/Student_ID"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:inputType="text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/studentID_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/implicit_call"
        android:layout_width="166dp"
        android:layout_height="77dp"
        android:layout_marginStart="28dp"
        android:text="@string/implicit_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Student_ID"
        app:layout_constraintVertical_bias="0.077" />

    <Button
        android:id="@+id/explicit_call"
        android:layout_width="166dp"
        android:layout_height="79dp"
        android:layout_marginEnd="32dp"
        android:text="@string/explicit_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentID"
        app:layout_constraintVertical_bias="0.077" />

</androidx.constraintlayout.widget.ConstraintLayout>